Fix headers disapearing behind the fixed header when using
This comes up when using anchor links

--- a/_sass/_06_typography.scss
+++ b/_sass/_06_typography.scss
@@ -97,23 +97,29 @@ h1 {
 }
 h2 {
     font-size: $font-size-h2;
-    margin: 1.563em 0 0 0;
+    margin: 0;
+    padding-top: 1.563em;
 }
     .blog-index h2 {
         margin-top: 0;
     }
 h3 {
     font-size: $font-size-h3;
-    margin: 1.152em 0 0 0;
+    margin: 0;
+    padding-top: 1.152em;
 }
 h4 {
     font-size: $font-size-h4;
-    margin: 1.152em 0 0 0;
+    margin: 0;
+    padding-top: 1.152em;
 }
 h5 {
     font-size: $font-size-h5;
-    margin: 1em 0 0 0;
+    margin: 0;
+    padding-top: 1em;
 }
+
+
 
 
 
